# pytest-result-sender

./: main.py  pyproject.toml
src/pytest_result_sender/: plugin.py
